--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
+    <!-- Event snippet for Testa da silva conversion page -->
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17076536946"></script>
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-W7FVN2PC');</script>
+<!-- End Google Tag Manager -->
+     <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date()); </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BoostAds</title>
@@ -11,6 +25,7 @@
     <link rel="stylesheet" href="mobile-sm.css">
     <link rel="shortcut icon" href="BOOSTADS_1920_x_1080_px_1920_x_1080_px_1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+   
 </head>
 <body>
     <header id="wts">
@@ -110,12 +125,18 @@
     </section>
     <footer>
         <p>&copy;BoostAds - Todos os direitos reservados.</p>
-        <a href="">instagram  <i class="bi bi-instagram"></i></a>
+        <a href="https://www.instagram.com/boostads_oficial/">instagram  <i class="bi bi-instagram"></i></a>
         <ul>
             <li><a href="https://wa.link/1wwfj1">ajuda</a></li>
             <li><a href="https://wa.link/1wwfj1">contanto</a></li>
         </ul>
         
     </footer>
+    <!-- Google tag (gtag.js) -->
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W7FVN2PC"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
